Fix possible invalid refs

--- a/versions/latest/modules/zh/pages/cluster-admin/backups-and-restore/backups.adoc
+++ b/versions/latest/modules/zh/pages/cluster-admin/backups-and-restore/backups.adoc
@@ -266,7 +266,12 @@ RKE2/K3s::
 
 *结果*：根据你的<<_快照备份目标,快照备份目标>>创建一次性快照，并将其保存在选定的备份目标中。
 
-== 快照备份目标 Rancher 支持两种不同的备份目标： - <<_本地备份目标,本地目标>> - <<_s3_备份目标,S3 目标>>
+== 快照备份目标
+
+Rancher 支持两种不同的备份目标：
+
+* <<_本地备份目标,本地目标>>
+* <<_s3_备份目标,S3 目标>>
 
 === 本地备份目标
 
