--- a/versions/latest/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -190,9 +190,9 @@ Linux 和 Windows 集群::
 | 该脚本从 `rancher-windows-images.tar.gz` 文件中加载镜像，并把镜像推送到你的私有镜像仓库。
 |===
 
-[#_2_将镜像保存到你的_windows_server_工作站]
+[#_win_2_将镜像保存到你的_windows_server_工作站]
 [pass]
-<h3><a class="anchor" id="_2_将镜像保存到你的_windows_server_工作站" href="_2_将镜像保存到你的_windows_server_工作站"></a>2. 将镜像保存到你的 Windows Server 工作站</h3>
+<h3><a class="anchor" id="_win_2_将镜像保存到你的_windows_server_工作站" href="_win_2_将镜像保存到你的_windows_server_工作站"></a>2. 将镜像保存到你的 Windows Server 工作站</h3>
 
 . 在 `powershell` 中，进入上一步下载的文件所在的目录。
 . 运行 `rancher-save-images.ps1` 以创建包含所有所需镜像的压缩包：
