--- a/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/configuration/receivers.adoc
+++ b/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/configuration/receivers.adoc
@@ -52,11 +52,11 @@ https://prometheus.io/docs/alerting/latest/configuration/#configuration-file[Ale
 你可以在 Rancher UI 中可以配置以下类型的接收器：
 
 * <<_slack,Slack>>
-* <<_email,电子邮件>>
+* <<_电子邮件,电子邮件>>
 * <<_pagerduty,PagerDuty>>
 * <<_opsgenie,Opsgenie>>
 * <<_webhook,Webhook>>
-* <<_custom,自定义>>
+* <<_自定义,自定义>>
 * <<_teams,Teams>>
 * <<_sms,SMS>>
 
