--- a/versions/v2.8/modules/zh/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
@@ -11,9 +11,9 @@
 RKE::
 +
 --
-. <<_1_创建云凭证,创建云凭证>>
-. <<_2_使用云凭证创建节点模板,使用云凭证创建节点模板>>
-. <<_3_使用节点模板创建具有节点池的集群,使用节点模板创建具有节点池的集群>>
+. <<_rke_1_创建云凭证,创建云凭证>>
+. <<_rke_2_使用云凭证创建节点模板,使用云凭证创建节点模板>>
+. <<_rke_3_使用节点模板创建具有节点池的集群,使用节点模板创建具有节点池的集群>>
 
 [#_rke_1_创建云凭证]
 [pass]
@@ -28,9 +28,9 @@ RKE::
 
 *结果*：已创建用于在集群中配置节点的云凭证。你可以在其他节点模板或集群中复用这些凭证。
 
-[#_2_使用云凭证创建节点模板]
+[#_rke_2_使用云凭证创建节点模板]
 [pass]
-<h3><a class="anchor" id="_2_使用云凭证创建节点模板" href="#_2_使用云凭证创建节点模板"></a>2. 使用云凭证创建节点模板</h3>
+<h3><a class="anchor" id="_rke_2_使用云凭证创建节点模板" href="#_rke_2_使用云凭证创建节点模板"></a>2. 使用云凭证创建节点模板</h3>
 
 为 DigitalOcean 创建xref:cluster-deployment/infra-providers/infra-providers.adoc#_节点模板[节点模板] 会允许 Rancher 在 DigitalOcean 中配置新节点。其他集群可以复用节点模板。
 
@@ -40,9 +40,9 @@ RKE::
 . 单击 *DigitalOcean*。
 . 填写 DigitalOcean 的节点模板。有关填写表单的帮助，请参阅 xref:cluster-deployment/infra-providers/digitalocean/node-template-configuration.adoc[DigitalOcean 节点模板配置]。
 
-[#_3_使用节点模板创建具有节点池的集群]
+[#_rke_3_使用节点模板创建具有节点池的集群]
 [pass]
-<h3><a class="anchor" id="_3_使用节点模板创建具有节点池的集群" href="#_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
+<h3><a class="anchor" id="_rke_3_使用节点模板创建具有节点池的集群" href="#_rke_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
 
 . 点击 *☰ > 集群管理*。
 . 在**集群**页面上，单击**创建**。
