--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
@@ -24,14 +24,14 @@ K3s::
 [pass]
 <h2><a class="anchor" id="_k3s_安装概要" href="#_k3s_安装概要"></a>安装概要</h2>
 
-. <<_1_准备镜像目录,准备镜像目录>>
-. <<_2_创建镜像仓库_yaml,创建镜像仓库 YAML>>
-. <<_3_安装_k3s,安装 K3s>>
-. <<_4_保存并开始使用_kubeconfig_文件,保存并开始使用 kubeconfig 文件>>
+. <<_k3s_1_准备镜像目录,准备镜像目录>>
+. <<_k3s_2_创建镜像仓库_yaml,创建镜像仓库 YAML>>
+. <<_k3s_3_安装_k3s,安装 K3s>>
+. <<_k3s_4_保存并开始使用_kubeconfig_文件,保存并开始使用 kubeconfig 文件>>
 
-[#_1_准备镜像目录]
+[#_k3s_1_准备镜像目录]
 [pass]
-<h2><a class="anchor" id="_1_准备镜像目录" href="#_1_准备镜像目录"></a>1. 准备镜像目录</h2>
+<h2><a class="anchor" id="_k3s_1_准备镜像目录" href="#_k3s_1_准备镜像目录"></a>1. 准备镜像目录</h2>
 
 从 https://github.com/k3s-io/k3s/releases[Releases] 页面获取要运行的 K3s 版本的镜像 tar 文件。
 
@@ -73,7 +73,7 @@ configs:
 
 有关 K3s 的私有镜像仓库配置文件的详情，请参见 https://rancher.com/docs/k3s/latest/en/installation/private-registry/[K3s 官方文档]。
 
-[#_3_安装_k3s]
+[#_k3s_3_安装_k3s]
 [pass]
 <h2><a class="anchor" id="_3_安装_k3s" href="#_3_安装_k3s"></a>3. 安装 K3s</h2>
 
@@ -170,14 +170,14 @@ RKE2::
 [pass]
 <h2><a class="anchor" id="_rke2_安装概要" href="#_rke2_安装概要"></a>安装概要</h2>
 
-. <<_1_创建_rke2_配置,创建 RKE2 配置>>
-. <<_2_创建镜像仓库_yaml,创建镜像仓库 YAML>>
-. <<_3_安装_rke2,安装 RKE2>>
-. <<_4_保存并开始使用_kubeconfig_文件,保存并开始使用 kubeconfig 文件>>
+. <<_rke2_1_创建_rke2_配置,创建 RKE2 配置>>
+. <<_rke2_2_创建镜像仓库_yaml,创建镜像仓库 YAML>>
+. <<_rke2_3_安装_rke2,安装 RKE2>>
+. <<_rke2_4_保存并开始使用_kubeconfig_文件,保存并开始使用 kubeconfig 文件>>
 
-[#_1_创建_rke2_配置]
+[#_rke2_1_创建_rke2_配置]
 [pass]
-<h2><a class="anchor" id="_1_创建_rke2_配置" href="#_1_创建_rke2_配置"></a>1. 创建 RKE2 配置</h2>
+<h2><a class="anchor" id="_rke2_1_创建_rke2_配置" href="#_rke2_1_创建_rke2_配置"></a>1. 创建 RKE2 配置</h2>
 
 把 config.yaml 文件创建到 `/etc/rancher/rke2/config.yaml` 中。这将包含创建高可用 RKE2 集群所需的所有配置选项。
 
@@ -233,9 +233,9 @@ configs:
 
 有关 RKE2 的私有镜像仓库配置文件的详情，请参见 https://docs.rke2.io/install/containerd_registry_configuration[RKE2 官方文档]。
 
-[#_3_安装_rke2]
+[#_rke2_3_安装_rke2]
 [pass]
-<h2><a class="anchor" id="_3_安装_rke2" href="#_3_安装_rke2"></a>3. 安装 RKE2</h2>
+<h2><a class="anchor" id="_rke2_3_安装_rke2" href="#_rke2_3_安装_rke2"></a>3. 安装 RKE2</h2>
 
 Rancher 需要安装在支持的 Kubernetes 版本上。如需了解你使用的 Rancher 版本支持哪些 Kubernetes 版本，请参见link:https://rancher.com/support-maintenance-terms/[支持维护条款]。
 
