--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -25,10 +25,10 @@
 --
 如果 Rancher Server 用于配置仅有 Linux 节点的集群，请按以下步骤将你的镜像推送到私有镜像仓库。
 
-. <<_1_找到你的_rancher_版本所需的资源,找到你的 Rancher 版本所需的资源>>
-. <<_2_收集_cert_manager_镜像,收集 cert-manager 镜像>>（除非你使用自己的证书，或在负载均衡器上终止 TLS）
-. <<_3_将镜像保存到你的工作站中,把镜像保存到你的工作站>>
-. <<_4_推送镜像到私有镜像仓库,推送镜像到私有镜像仓库>>
+. <<_linux_1_找到你的_rancher_版本所需的资源,找到你的 Rancher 版本所需的资源>>
+. <<_linux_2_收集_cert_manager_镜像,收集 cert-manager 镜像>>（除非你使用自己的证书，或在负载均衡器上终止 TLS）
+. <<_linux_3_将镜像保存到你的工作站中,把镜像保存到你的工作站>>
+. <<_linux_4_推送镜像到私有镜像仓库,推送镜像到私有镜像仓库>>
 
 [#_linux_先决条件]
 [pass]
@@ -38,9 +38,9 @@
 
 如果你的主机架构是 ARM64，镜像仓库必须支持 Manifest。这是因为从 2020 年 4 月开始, Amazon Elastic Container Registry 已经不再支持 Manifest。
 
-[#_1_找到你的_rancher_版本所需的资源]
+[#_linux_1_找到你的_rancher_版本所需的资源]
 [pass]
-<h2><a class="anchor" id="_1_找到你的_rancher_版本所需的资源" href="#_1_找到你的_rancher_版本所需的资源"></a>1. 找到你的 Rancher 版本所需的资源</h2>
+<h2><a class="anchor" id="_linux_1_找到你的_rancher_版本所需的资源" href="#_linux_1_找到你的_rancher_版本所需的资源"></a>1. 找到你的 Rancher 版本所需的资源</h2>
 
 . 访问 Rancher 的link:https://github.com/rancher/rancher/releases[发布说明]页面，找到你需要安装的 Rancher v2.x.x 版本，然后点击 *Assets*。注意不要使用带有 `rc` 或 `Pre-release` 标记的版本，因为这些版本在生产环境中不够稳定。
 . 从你所需版本的 *Assets* 处下载以下文件，这些文件是在离线环境中安装 Rancher 所必须的：
@@ -58,9 +58,9 @@
 | 该脚本从 `rancher-images.tar.gz` 文件中加载镜像，并把镜像推送到你的私有镜像仓库。
 |===
 
-[#_2_收集_cert_manager_镜像]
+[#_linux_2_收集_cert_manager_镜像]
 [pass]
-<h2><a class="anchor" id="_2_收集_cert_manager_镜像" href="#_2_收集_cert_manager_镜像"></a>2. 收集 cert-manager 镜像</h2>
+<h2><a class="anchor" id="_linux_2_收集_cert_manager_镜像" href="#_linux_2_收集_cert_manager_镜像"></a>2. 收集 cert-manager 镜像</h2>
 
 [NOTE]
 ====
