--- a/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
+++ b/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
@@ -2,7 +2,7 @@
 
 == Microsoft Graph API
 
-Microsoft Graph API 现在是设置 Azure AD 的流程。下文将帮助<<_新用户设置,新用户>>使用新实例来配置 Azure AD，并帮助现有 Azure 应用所有者<<从-azure-ad-graph-api-迁移到-microsoft-graph-api,迁移到新流程>>。
+Microsoft Graph API 现在是设置 Azure AD 的流程。下文将帮助<<_新用户设置,新用户>>使用新实例来配置 Azure AD，并帮助现有 Azure 应用所有者<<_从_azure_ad_graph_api_迁移到_microsoft_graph_api,迁移到新流程>>。
 
 Rancher 中的 Microsoft Graph API 流程正在不断发展。建议你使用最新的 2.7 补丁版本，该版本仍在积极开发中，并将持续获得新功能和改进。
 
