--- a/versions/v2.9/modules/zh/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/azure.adoc
+++ b/versions/v2.9/modules/zh/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/azure.adoc
@@ -8,7 +8,7 @@ In Kubernetes v1.30 and later, the in-tree cloud providers have been removed. Ra
 
 To migrate from the in-tree cloud provider to the out-of-tree Azure cloud provider, you must stop the existing cluster's kube controller manager and install the Azure cloud controller manager.
 
-If it's acceptable to have some downtime during migration, follow the instructions to xref:#_using_the_out_of_tree_azure_cloud_provider[set up an external cloud provider]. These instructions outline how to configure the out-of-tree cloud provider for a newly provisioned cluster. During set up, there will be some downtime, as there is a time gap between when the old cloud provider stops running and when the new cloud provider starts to run.
+If it's acceptable to have some downtime during migration, follow the instructions to xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_using_the_out_of_tree_azure_cloud_provider[set up an external cloud provider]. These instructions outline how to configure the out-of-tree cloud provider for a newly provisioned cluster. During set up, there will be some downtime, as there is a time gap between when the old cloud provider stops running and when the new cloud provider starts to run.
 
 If your setup can't tolerate any control plane downtime, you must enable leader migration. This facilitates a smooth transition from the controllers in the kube controller manager to their counterparts in the cloud controller manager.
 
@@ -62,9 +62,9 @@ kubectl cordon -l "node-role.kubernetes.io/control-plane=true"
 ----
 
 . To deploy the Azure cloud controller manager, use any of the available options:
- ** UI: Follow steps 1-10 of xref:#_helm_chart_installation_from_ui[Helm chart installation from UI] to install the cloud controller manager chart.
- ** CLI: Follow steps 1-4 of xref:#_helm_chart_installation_from_cli[Helm chart installation from CLI].
- ** Update the cluster's additional manifest: Follow steps 2-3 to xref:#_using_the_out_of_tree_azure_cloud_provider[install the cloud controller manager chart].
+ ** UI: Follow steps 1-10 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_ui[Helm chart installation from UI] to install the cloud controller manager chart.
+ ** CLI: Follow steps 1-4 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_cli[Helm chart installation from CLI].
+ ** Update the cluster's additional manifest: Follow steps 2-3 to xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_using_the_out_of_tree_azure_cloud_provider[install the cloud controller manager chart].
 
 +
 Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes.
@@ -167,8 +167,8 @@ kubectl cordon -l "node-role.kubernetes.io/controlplane=true"
 ----
 
 . To install the Azure cloud controller manager, follow the same steps as when installing Azure cloud provider on a new cluster:
- ** UI: Follow steps 1-10 of xref:#_helm_chart_installation_from_ui[Helm chart installation from UI] to install the cloud controller manager chart.
- ** CLI: Follow steps 1-4 of xref:#_helm_chart_installation_from_cli[Helm chart installation from CLI] to install the cloud controller manager chart.
+ ** UI: Follow steps 1-10 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_ui[Helm chart installation from UI] to install the cloud controller manager chart.
+ ** CLI: Follow steps 1-4 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_cli[Helm chart installation from CLI] to install the cloud controller manager chart.
 . Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes. After updating the cluster in the next step, RKE will upgrade and uncordon each node, and schedule `cloud-controller-manager` pods.
 . To enable leader migration, add `--enable-leader-migration` to the container arguments of `cloud-controller-manager`:
 +
