--- a/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/vsphere/create-a-vm-template.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/vsphere/create-a-vm-template.adoc
@@ -2,7 +2,7 @@
 
 要重复且可靠地创建虚拟机通常非常困难。VMware vSphere 支持构建可以转换为模板的虚拟机。然后，你可以使用该模板来创建配置相同的虚拟机。Rancher 会在节点池中利用此功能来创建相同的 RKE1 和 RKE2 节点。
 
-为了使用模板创建新的虚拟机，Rancher 有虚拟机必须预先安装的<<_要求,特定要求>>。根据这些要求配置虚拟机后，你需要<<准备虚拟机,准备虚拟机>>，然后再<<创建模板,创建模板>>。准备工作完成后，虚拟机可以<<转换为模板,转换为模板>>并<<移动到内容库,移动到内容库中>>，然后 Rancher 节点池就可以使用它了。
+为了使用模板创建新的虚拟机，Rancher 有虚拟机必须预先安装的<<_要求,特定要求>>。根据这些要求配置虚拟机后，你需要<<_准备虚拟机,准备虚拟机>>，然后再<<_创建模板,创建模板>>。准备工作完成后，虚拟机可以<<_转换为模板,转换为模板>>并<<_移动到内容库,移动到内容库中>>，然后 Rancher 节点池就可以使用它了。
 
 == 要求
 
