--- a/versions/v2.8/modules/zh/pages/cluster-deployment/custom-clusters/windows/workload-migration-guidance.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-deployment/custom-clusters/windows/workload-migration-guidance.adoc
@@ -323,7 +323,7 @@ ____
 
 == 将工作负载迁移到 {rke2-product-name} Windows 的指南
 
-参考<<_对比_rancher_25_与_rancher_26windows_集群的支持矩阵,对比 Rancher 2.5 与 Rancher 2.6：Windows 集群的支持矩阵>>和<<对比-rancher-25-与-rancher-26支持用于配置-rke1-和-rke2-windows-集群的-kubernetes-版本,对比 Rancher 2.5 与 Rancher 2.6：支持用于配置 RKE1 和 RKE2 Windows 集群的 Kubernetes 版本>>中的表格，你会发现 RKE1 和 RKE2 的 Kubernetes 1.22 版本发生了重叠。因此，当遵循 Rancher 推荐的方法时，这将是迁移 RKE1 Windows 工作负载所需的基本版本。
+参考<<_对比_rancher_2_5_与_rancher_2_6windows_集群的支持矩阵,对比 Rancher 2.5 与 Rancher 2.6：Windows 集群的支持矩阵>>和<<对比_rancher_2_5_与_rancher_2_6支持用于配置_rke1_和_rke2_windows_集群的_kubernetes_版本,对比 Rancher 2.5 与 Rancher 2.6：支持用于配置 RKE1 和 RKE2 Windows 集群的 Kubernetes 版本>>中的表格，你会发现 RKE1 和 RKE2 的 Kubernetes 1.22 版本发生了重叠。因此，当遵循 Rancher 推荐的方法时，这将是迁移 RKE1 Windows 工作负载所需的基本版本。
 
 === Rancher 2.5 的就地升级
 
